--- a/css/fonts.css
+++ b/css/fonts.css
@@ -7,3 +7,15 @@
          url('../fonts/alk-life-webfont.ttf') format('truetype'), /* Safari, Android, iOS */
          url('../fonts/alk-life-webfont.svg#alk_liferegular') format('svg'); /* Legacy iOS */
 }
+
+@font-face {
+    font-family: 'Kalam';
+    src: url('../fonts/kalam/Kalam-Regular.eot');
+    src: url('../fonts/kalam/Kalam-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/kalam/Kalam-Regular.woff2') format('woff2'),
+        url('../fonts/kalam/Kalam-Regular.woff') format('woff'),
+        url('../fonts/kalam/Kalam-Regular.ttf') format('truetype'),
+        url('../fonts/kalam/Kalam-Regular.svg#Kalam-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
