--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@
 .image1{
 	margin-top: 77px;
 	margin-bottom: 118px;
+	margin-right:auto;
 }
 .text{
 	color: #000000;
@@ -56,6 +57,10 @@
 	font-size: 20px;
 	color: #58595B;
 	margin-left: 40px;
+	font-family: 'Kalam';
+	text-transform: capitalize;
+	text-indent: 30px;
+	font-weight: 700;
 }
 .text1{
 	color: #3D58A6;
@@ -65,6 +70,7 @@
 	color:#333333;
 	font-family: 'Fjalla One', sans-serif;
     font-family: 'Sansita Swashed', cursive;
+    letter-spacing: 1.5px;
 }
 /*article*/
 
@@ -147,4 +153,5 @@
 	/*margin-left: auto;
 	margin-right: auto;*/
 	margin:0 auto;
+	line-height: 1.5;
 }
