--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,7 @@
 	padding: 50px;
 }
 .title-contact{
+	display: inline-block;
 	vertical-align: top;
 	
 	margin-left: 90px;
@@ -141,6 +142,7 @@
 	margin-bottom: 10px;
 }
 .map{
+	display: inline-block;
 	margin-left: 40px;
 
 }
@@ -158,6 +160,10 @@
 }
 
 /*footer*/
+.fb,
+.Youtube {
+	display: inline-block;
+}
 
 .fb::after {
 	content: '';
